# RATH

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.bat
engine/: CMakeLists.txt
engine/src/Rath/Core/: application.cpp  application.hpp  defines.h  defines.hpp  platformDetection.h  platformDetection.hpp
engine/src/Rath/Platform/: window.cpp  window.hpp
engine/src/Rath/Renderer/: context.cpp  context.hpp  device.cpp  device.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  swapchain.cpp  swapchain.hpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
